--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "repository": "https://github.com/snthejus/notekeeper",
   "author": "snthejus",
-  "license": "MIT License",
+  "license": "MIT",
   "main": "./src/app/main/app-window.js",
   "scripts": {
     "start": "./node_modules/.bin/electron . --allow-file-access-from-files",
